--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <div class="row padding">
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="card">
-      <img  alt= "aaron" class="card-img-top" src= "img/aaron.jpg">
+      <img  alt= "aaron" class="card-img-top" src= "img/teammate.jpg">
       <div class="card-body">
         <h3 class="card-title text-center"> Aaron Jutzi</h3>
         <h3 class="card-text text-center"> GIS & Web Developer </h3>
@@ -149,7 +149,7 @@
   </div>
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="card">
-      <img class="card-img-top" src= "img/team1.png" alt= "toby">
+      <img class="card-img-top" src= "img/teammate.jpg" alt= "toby">
       <div class="card-body">
         <h3 class="card-text text-center"> Toby Agomuo</h3>
         <h3 class="card-text text-center"> GIS & Web Developer </h3>
